Propagate return values all the way out when resolving a relative URL against a mailbox URL as base.  Fixes crash when document.write-ing LINK with rel=stylesheet and relative URL in HTML mail attachment.  b=241254  r=bienvenu  sr=mscott